--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         
         <section class="main">
             <header class="Header">
-                <h1>freeCodeCamp Survey Form</h1>
+                <h1>Survey Form</h1>
                 <p>Thank you for taking the time to help us improve the platform</p>
         </header>
             <form action="" id="survey-form">
